--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: java
     plan: free
     buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -jar target/*.jar
+    startCommand: java -jar target/laespigabackend-0.0.1-SNAPSHOT.jar
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
