--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.security=DEBUG
+logging.level.com.laespiga.laespigabackend.config=DEBUG
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=864400000
