--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-SPRING_DATASOURCE_URL=jdbc:postgresql://ep-autumn-union-adh2gt52-pooler.c-2.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_UxKCtkd9O8GY&sslmode=require&channelBinding=require
-SPRING_DATASOURCE_USERNAME=neondb_owner
-SPRING_DATASOURCE_PASSWORD=npg_UxKCtkd9O8GY
-JWT_SECRET=4ac90015dd2bb457b254f0ad7911ed10
-PORT=8080
+git
