--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=864400000
 server.port=${PORT:8080}
 
-# --- CONFIGURACIÓN EMAIL (GMAIL EJEMPLO) ---
-# Debes generar una "Contraseña de Aplicación" en tu cuenta de Google
+# --- CONFIGURACION EMAIL (GMAIL EJEMPLO) ---
+# Debes generar una "ContraseÃ±a de Aplicacion" en tu cuenta de Google
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=laespiga0120@gmail.com
